apex/force-app/main/default/objects/Timecards__c/Timecards__c.object-meta.xml
<CustomObject>
    <description>Timesheets object</description>
    <label>Timecards</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>