apex/force-app/main/default/objects/Timecards__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Development</fullName>
            </value>
            <value>
                <fullName>PTO-Personal</fullName>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Company Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>