apex/force-app/main/default/objects/Timecards__c/fields/Work_Week_End_Day__c.field-meta.xml
<CustomField>
    <fullName>Work_Week_End_Day__c</fullName>
    <label>Work Week End Day</label>
    <type>Date</type>
</CustomField>